--- a/Bookmark/main.css
+++ b/Bookmark/main.css
@@ -12,3 +12,13 @@
     filter: invert(53%) sepia(38%) saturate(3303%) hue-rotate(326deg)
     brightness(101%) contrast(96%);
 }
+
+.active{
+    display: block;
+}
+
+.rotate {
+    transform: rotate(180deg); /* Rotate arrow 180 degrees */
+}
+
+
